After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775459 - oggdemux: Hangs on divx-bandits-sample file
oggdemux: Hangs on divx-bandits-sample file
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-12-01 12:01 UTC by Hanno Böck
Modified: 2016-12-05 09:12 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Hanno Böck 2016-12-01 12:01:49 UTC
gst-discoverer-1.0 with this file
http://samples.mplayerhq.hu/ogg/DShow-OLD/divx-bandits-sample.avi
will hang until a timeout happens.
Comment 1 Sebastian Dröge (slomo) 2016-12-01 13:06:49 UTC
This is actually a Ogg file.
Comment 2 Sebastian Dröge (slomo) 2016-12-01 13:16:55 UTC
commit 732ecf092510abc1712a9282a0a705a21a8d86ad
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Thu Dec 1 15:12:59 2016 +0200

    oggdemux: Don't end up ignoring caps just because there are no headers for this stream
    
    https://bugzilla.gnome.org/show_bug.cgi?id=775459
Comment 3 Sebastian Dröge (slomo) 2016-12-01 13:17:38 UTC
The video still does not play, only the audio part. We don't support that weird old DirectShow mapping for Ogg, and it probably does not make sense to add support for it (unless someone is bored).