oggdemux: Don't end up ignoring caps just because there are no headers for this stream

https://bugzilla.gnome.org/show_bug.cgi?id=775459